// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box between applies space-between 1`] = `
<Box
  between="space-between"
  inline={false}
  tag="div"
>
  <styled.div
    between="space-between"
    inline={false}
    tag="div"
  >
    <div
      className="sc-aXZVg dtGQza"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box between arranges the children horizontally or vertically be either inline or block 1`] = `
<Box
  between={3}
  inline={false}
  tag="div"
>
  <styled.div
    between={3}
    inline={false}
    tag="div"
  >
    <div
      className="sc-aXZVg cPJwEj"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box between arranges the children horizontally or vertically be either inline or block 2`] = `
<Box
  between={3}
  inline={true}
  tag="div"
>
  <styled.div
    between={3}
    inline={true}
    tag="div"
  >
    <div
      className="sc-aXZVg dPmMeI"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box between can handle a between={0} prop 1`] = `
<Box
  between={0}
  inline={false}
  tag="div"
>
  <styled.div
    between={0}
    inline={false}
    tag="div"
  >
    <div
      className="sc-aXZVg jNNAZe"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box between can handle a between={0} prop 2`] = `
<Box
  between={0}
  inline={true}
  tag="div"
>
  <styled.div
    between={0}
    inline={true}
    tag="div"
  >
    <div
      className="sc-aXZVg kEDeWt"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box between can handle responsive props 1`] = `
<Box
  between={
    Object {
      "md": 8,
      "xs": 4,
    }
  }
  inline={
    Object {
      "md": true,
      "xs": false,
    }
  }
  tag="div"
>
  <styled.div
    between={
      Object {
        "md": 8,
        "xs": 4,
      }
    }
    inline={
      Object {
        "md": true,
        "xs": false,
      }
    }
    tag="div"
  >
    <div
      className="sc-aXZVg ctJCcE"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box between separates children by equal margins in a stack 1`] = `
<Box
  between={2}
  inline={false}
  tag="div"
>
  <styled.div
    between={2}
    inline={false}
    tag="div"
  >
    <div
      className="sc-aXZVg fMjfal"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box between separates children by equal margins inline 1`] = `
<Box
  between={2}
  inline={true}
  tag="div"
>
  <styled.div
    between={2}
    inline={true}
    tag="div"
  >
    <div
      className="sc-aXZVg kiRGJS"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box can apply bottom margin 1`] = `
<Box
  below={2}
  between={3}
  inline={false}
  tag="div"
>
  <styled.div
    below={2}
    between={3}
    inline={false}
    tag="div"
  >
    <div
      className="sc-aXZVg iOFecL"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box insets can be either vertical or horizonal 1`] = `
<Box
  between={3}
  inline={false}
  tag="div"
  vertical={1}
>
  <styled.div
    between={3}
    inline={false}
    tag="div"
    vertical={1}
  >
    <div
      className="sc-aXZVg dOWxJz"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box insets can be either vertical or horizonal 2`] = `
<Box
  between={3}
  horizontal={1}
  inline={false}
  tag="div"
>
  <styled.div
    between={3}
    horizontal={1}
    inline={false}
    tag="div"
  >
    <div
      className="sc-aXZVg isbtU"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box insets can be either vertical or horizonal 3`] = `
<Box
  between={3}
  horizontal={3}
  inline={false}
  tag="div"
  vertical={2}
>
  <styled.div
    between={3}
    horizontal={3}
    inline={false}
    tag="div"
    vertical={2}
  >
    <div
      className="sc-aXZVg ivatao"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box insets can be equal on all sides 1`] = `
<Box
  between={3}
  inline={false}
  inset={3}
  tag="div"
>
  <styled.div
    between={3}
    inline={false}
    inset={3}
    tag="div"
  >
    <div
      className="sc-aXZVg gvEusw"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box insets can handle responsive horizontal and vertical 1`] = `
<Box
  between={3}
  inline={false}
  tag="div"
  vertical={
    Object {
      "md": 4,
      "xs": 1,
    }
  }
>
  <styled.div
    between={3}
    inline={false}
    tag="div"
    vertical={
      Object {
        "md": 4,
        "xs": 1,
      }
    }
  >
    <div
      className="sc-aXZVg hqxExe"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box insets can handle responsive horizontal and vertical 2`] = `
<Box
  between={3}
  horizontal={
    Object {
      "md": 4,
      "xs": 1,
    }
  }
  inline={false}
  tag="div"
>
  <styled.div
    between={3}
    horizontal={
      Object {
        "md": 4,
        "xs": 1,
      }
    }
    inline={false}
    tag="div"
  >
    <div
      className="sc-aXZVg hhrpSW"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box insets can handle responsive horizontal and vertical 3`] = `
<Box
  between={3}
  horizontal={
    Object {
      "lg": 8,
      "xs": 3,
    }
  }
  inline={false}
  tag="div"
  vertical={
    Object {
      "md": 4,
      "xs": 1,
    }
  }
>
  <styled.div
    between={3}
    horizontal={
      Object {
        "lg": 8,
        "xs": 3,
      }
    }
    inline={false}
    tag="div"
    vertical={
      Object {
        "md": 4,
        "xs": 1,
      }
    }
  >
    <div
      className="sc-aXZVg bEllPP"
    >
      Some content
    </div>
  </styled.div>
</Box>
`;

exports[`Box renders 1`] = `
<styled.div
  between={3}
  inline={false}
  tag="div"
>
  Some content
</styled.div>
`;
